# gsm

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .releaserc.json  BP.md  BP_version.md  CHANGELOG.md  Caddyfile  Dockerfile  Dockerfile.prod  ORGA.md  ORGA2.md  README.md  THERA.md  android.ps1  apk.ps1  docker-compose.prod.yml  docker-compose.yml  go  go.ps1  gu  gu.ps1  hot  hot.ps1  package-lock.json  package.json  pyproject.toml  quick_test.py  requirements.txt  tree.txt  up.ps1  wikidoc.md
.codespaces/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.sh  postCreateCommand.sh
.husky/: pre-commit
doc/: 0000_HELPME.md  0000_Test copy.ipynb  0000_Test.ipynb  0001_TOC.md  0101_GIT_FORK.md  0102_GIT_CLONE.md  0103_GIT_USE.md  0104_GIT_BRANCH.md  0104_GIT_DEV.md  0105_GIT_STATUS.md  0106_GIT_COMMIT.md  0107_GIT_EXO.md  0107_GIT_PUSH.md  0108_GIT_EXO.md  0109_GIT_SYNC.md  0110_GIT_PR.md  0111_GIT_PR_GH.md  0112_GIT_PR_DEAL.md  01_GIT.md  0200_VSC_INSTALL.md  0201_VSC_EXT01_UNGIT.md  0201_VSC_INSTALL.md  0202_VSC_EXT02_GG.md  0202_VSC_GIT_EXT.md  0203_VSC_EXT3.md  0203_VSC_MAJ_EXT.md  0204_VSC_EXT04_TODO.md  0204_VSC_SBCTD1.md  0204_VSC_STDT1.md  0205_VSC_EXT05_.md  0205_VSC_SBCTD2.md  0205_VSC_STDT2.md  0206_VSC_SBCTD3.md  0206_VSC_STDT3.md  0207_VSC_SBCTD4.md  0277_VSC_MM.md  0299_VSC_uuuBC_uuuu.md  02_VSC.md  0300_GIT_DEEP.ipynb  0300_GIT_DEEP.md  (+38 more)
myApp/: audio.py  beep_engine.py  go.ps1  main.py
scripts/: Nom_Thomas.py  Nom_Thoms.py  check_version_sync.ps1  gdrive_get_token.py  hot_qt.py  qr.py  reset_gh.ps1  todo_tags.md  (+5 more)
(+112 files in other folders)
